src/human_study/program_1/python_err_msg.txt
File "./seq2parse/human_study/program_1/original.py", line 6
    def g(y)
            ^
SyntaxError: expected ':'
